--- a/config/boards/shields/avalanche/avalanche.conf
+++ b/config/boards/shields/avalanche/avalanche.conf
@@ -10,3 +10,8 @@ CONFIG_WS2812_STRIP=y
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+#configs para bluetooth
+CONFIG_BT_CTLR_PHY_2M=n
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
