--- a/config/west.yml
+++ b/config/west.yml
@@ -1,13 +1,11 @@
 manifest:
   remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: infused-kim
-      url-base: https://github.com/infused-kim
+    - name: joselucassr
+      url-base: https://github.com/joselucassr
   projects:
     - name: zmk
-      remote: infused-kim
-      revision: my-changes/split-encoder
+      remote: joselucassr
+      revision: abnt
       import: app/west.yml
   self:
     path: config
