--- a/config/west.yml
+++ b/config/west.yml
@@ -1,10 +1,12 @@
 manifest:
   remotes:
-    - name: joselucassr
-      url-base: https://github.com/joselucassr
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
+    - name: infused-kim
+      url-base: https://github.com/infused-kim
   projects:
     - name: zmk
-      remote: joselucassr
+      remote: infused-kim
       revision: my-changes/split-encoder
       import: app/west.yml
   self:
