--- a/config/west.yml
+++ b/config/west.yml
@@ -2,11 +2,11 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
-    - name: infused-kim
-      url-base: https://github.com/infused-kim
+    - name: joselucassr
+      url-base: https://github.com/joselucassr
   projects:
     - name: zmk
-      remote: infused-kim
+      remote: joselucassr
       revision: my-changes/split-encoder
       import: app/west.yml
   self:
